--- a/ElvUI_BenikUI/CHANGELOG.txt
+++ b/ElvUI_BenikUI/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2.21 - May 9, 2024
+Adjust to new pet frame skin in elvui. Credit: Tsxy
+Professions Dashboard for Cata
+
 2.20 - May 3, 2024
 Compatible for Cataclysm Classic. Credits: thurin, Tsxy
 
